Fixing up the problem with words overhanging the boxes on mobile.

--- a/src/assets/containers.css
+++ b/src/assets/containers.css
@@ -89,6 +89,8 @@
   box-shadow: 2px 5px 5px #888888;
   white-space: pre-wrap;
   background: #ffffff66;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .light {
